--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.spring</groupId>
 	<artifactId>Timesheet</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	<name>Timesheet</name>
 	<description>Timesheet</description>
@@ -61,5 +61,14 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>deploymentRepo</name>
+			<url>http://localhost:8081/repository/maven-releases/</url>
+		</repository>
+		
+	</repositories>
 
 </project>
